style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap');

/* || RESET DEFAULT STYLES */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html {
    height: 100%;
}

/* || GLOBAL VARIABLES */
:root {
    --LIGHT-RGB: 202 198 176;
    --DARK-RGB: 72 70 62;
    /* required for .current-page box-shadow */
    --NAV-MARGIN-BOTTOM: 1rem;
}

/* ELEMENT RULES */
body {
    height: 100%;
    background-color: rgb(var(--LIGHT-RGB));
    display: flex;
    flex-direction: column;

    color: rgb(var(--DARK-RGB));
    font-family: "Roboto", Helvetica, Arial, sans-serif;
    font-size: 1.5rem;
    font-weight: 300;
}

body::after {
    content: "";
    position: fixed;
    inset: 0;

    background-image:
        /* six diagonal lines */
        linear-gradient(45deg, transparent 572px, rgba(0, 0, 0, 10%) 572px, rgba(0, 0, 0, 10%) 574px, transparent 574px),
        linear-gradient(45deg, transparent 572px, rgba(0, 0, 0, 10%) 572px, rgba(0, 0, 0, 10%) 574px, transparent 574px),
        linear-gradient(45deg, transparent 572px, rgba(0, 0, 0, 10%) 572px, rgba(0, 0, 0, 10%) 574px, transparent 574px),
        linear-gradient(225deg, transparent 572px, rgba(0, 0, 0, 10%) 572px, rgba(0, 0, 0, 10%) 574px, transparent 574px),
        linear-gradient(225deg, transparent 572px, rgba(0, 0, 0, 10%) 572px, rgba(0, 0, 0, 10%) 574px, transparent 574px),
        linear-gradient(225deg, transparent 572px, rgba(0, 0, 0, 10%) 572px, rgba(0, 0, 0, 10%) 574px, transparent 574px),
        /* 4 corner circles */
        radial-gradient(circle at top left, transparent 508px, rgba(0, 0, 0, 10%) 508px, rgba(0, 0, 0, 10%) 510px, transparent 510px,
            transparent 528px, rgba(0, 0, 0, 10%) 528px, rgba(0, 0, 0, 10%) 530px, transparent 530px),
        radial-gradient(circle at bottom right, transparent 508px, rgba(0, 0, 0, 10%) 508px, rgba(0, 0, 0, 10%) 510px, transparent 510px,
            transparent 528px, rgba(0, 0, 0, 10%) 528px, rgba(0, 0, 0, 10%) 530px, transparent 530px);
    background-size:
        /* six diagonal lines */
        810px 810px, 810px 810px, 810px 810px, 810px 810px, 810px 810px, 810px 810px,
        /* 2 corner circles */
        530px 530px, 530px 530px;
    background-position:
        /* six diagonal lines */
        top left, top -30px left -90px, top -90px left -30px, bottom right, bottom -30px right -90px, bottom -90px right -30px,
        /* 2 corner circles */
        top left, bottom right;
    background-repeat: no-repeat;
    pointer-events: none;
}

body::before {
    content: "";
    position: fixed;
    inset: 0;

    --SCALAR: 0.8;
    background-image:
        /* quadratic spotlight effect */
        radial-gradient(circle at center,
            transparent calc(10vw * var(--SCALAR)),
            rgba(0, 0, 0, .0062) calc(20vw * var(--SCALAR)),
            rgba(0, 0, 0, .0555) calc(40vw * var(--SCALAR)),
            rgba(0, 0, 0, .1543) calc(60vw * var(--SCALAR)),
            rgba(0, 0, 0, .3022) calc(80vw * var(--SCALAR)),
            rgba(0, 0, 0, .5) calc(100vw * var(--SCALAR))),
        /* grid overlay effect */
        linear-gradient(to bottom, transparent 4px, rgba(0, 0, 0, 5%) 6px),
        linear-gradient(to right, transparent 4px, rgba(0, 0, 0, 5%) 6px);
    background-size: auto auto, 6px 6px, 6px 6px;
    z-index: 9999;
    pointer-events: none;
}

main {
    height: 100%;
    margin: 1rem 3rem;
    display: flex;
    flex-direction: column;
}

footer {
    margin-bottom: 3rem;
}

div.decorative-rule-line {
    border-top: 2px solid black;
}

div.decorative-rule-dots {
    --PATTERN-WIDTH: 60px;

    margin: 0rem 3rem;
    height: 18px;

    background-size: var(--PATTERN-WIDTH) 3px,
        var(--PATTERN-WIDTH) 6px, var(--PATTERN-WIDTH) 6px, var(--PATTERN-WIDTH) 6px;
    background-position: 50% 0px,
        calc(50% - 7px) 4px, calc(50% + 7px) 4px, 50% 12px;
    background-image: linear-gradient(90deg, rgb(var(--DARK-RGB)) 4px,
            transparent 4px, transparent calc(var(--PATTERN-WIDTH) - 4px),
            rgb(var(--DARK-RGB)) calc(var(--PATTERN-WIDTH) - 4px)),
        radial-gradient(circle, rgb(var(--DARK-RGB)), rgb(var(--DARK-RGB)) 2px, transparent 3px),
        radial-gradient(circle, rgb(var(--DARK-RGB)), rgb(var(--DARK-RGB)) 2px, transparent 3px),
        radial-gradient(circle, rgb(var(--DARK-RGB)), rgb(var(--DARK-RGB)) 2px, transparent 3px);
    background-repeat: repeat-x;
}

.decorative-bar {
    position: relative;
}

.decorative-bar::before {
    content: "";
    position: absolute;
    left: -3rem;
    top: 0;
    height: 100%;
    width: 21px;
    background-image: linear-gradient(90deg, rgba(var(--DARK-RGB)/.25) 12px,
            transparent 12px, transparent 18px,
            rgba(var(--DARK-RGB)/.25) 18px);
    z-index: -1;
}

nav {
    margin-left: 6rem;
    margin-right: 3rem;
    margin-bottom: var(--NAV-MARGIN-BOTTOM);
    margin-top: 2rem;
}

nav ul {
    list-style: none;
    text-transform: uppercase;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    gap: 1.75rem;
}

nav li {
    /* 166px is min-width of 'project' link, css unable to get min-width of widest sibling */
    flex: 1 0 166px;
}

.clickable {
    padding: 0.25em 0.25em;
    width: 100%;
    text-decoration: none;
    letter-spacing: 2px;
    font-variation-settings: "wdth" 62.5;
    white-space: nowrap;

    display: inline-flex;
    align-items: center;
}

nav .current-page {
    /* disable and highlight current page link */
    pointer-events: none;
    background-color: rgba(var(--DARK-RGB)/.8);
    box-shadow: 0px var(--NAV-MARGIN-BOTTOM) rgba(var(--DARK-RGB)/.8);
    color: rgb(var(--LIGHT-RGB));
    /* animation: name duration timing-function delay iteration-count direction fill-mode; */
    /* animation: blink 1.5s ease-out 0s infinite normal forwards; */
}

.clickable .material-icons {
    margin-right: 0.2em;
    font-size: 1.25em;
}

.fx {
    background-image: linear-gradient(90deg, rgb(var(--DARK-RGB)/.8) 50%,
            rgba(var(--DARK-RGB)/.2) 50%);
    background-size: 201% 100%;
    background-position: right;
    color: rgb(var(--DARK-RGB));

    position: relative;
    transition: color 0.2s ease-out, background-position 0.2s ease-out;
}

.fx:hover,
.fx:focus {
    color: rgb(var(--LIGHT-RGB));
    background-position: left;
    box-shadow: 2px 2px 2px rgb(var(--DARK-RGB)/0.5);
}

.fx::before {
    /* draw selected pointer decoration */
    content: "";
    position: absolute;
    width: 1.5rem;
    height: 1.5rem;

    background-color: rgba(var(--DARK-RGB)/.8);
    clip-path: polygon(25% 25%, 100% 47%, 25% 75%, 0 50%);
    left: -1.5rem;

    opacity: 0%;
}

.fx::after {
    /* draw selected line decoration */
    content: "";
    position: absolute;
    left: 0px;
    top: -5px;
    bottom: -5px;
    width: 100%;
    background: linear-gradient(rgba(var(--DARK-RGB)/.8) 5%,
            transparent 5%, transparent 95%,
            rgba(var(--DARK-RGB)/.8) 95%);
    opacity: 0%;
}

.fx:hover::before,
.fx:focus::before,
.fx:hover::after,
.fx:focus::after {
    /* reveal selected line decoration */
    opacity: 100%;
}

hgroup {
    display: flex;
    align-items: baseline;
    gap: 1rem;
    letter-spacing: 0.05em;
    margin-bottom: 1rem;
}

hgroup h1 {
    text-transform: uppercase;
    font-weight: 350;
    text-shadow: .3rem .3rem 0 rgb(var(--DARK-RGB)/0.3);
}

hgroup p {
    text-transform: capitalize;
    font-weight: 400;
    position: relative;
    left: -0.8rem;
}

hgroup p::before {
    content: "- ";
    position: relative;
    left: .2em;
}

.contact-form {
    margin: 0 auto 0 auto;
    max-width: 500px;

    display: flex;
    flex-direction: column;
    gap: 0.75rem;
}

.contact-form .form-row {
    display: flex;
    flex-direction: column;
    gap: 0.25rem;
}

.contact-form .form-button-row {
    display: grid;
    grid-template-columns: 1fr auto;
    gap: 1.75rem;
    margin-top: 1rem;
}

.contact-form .decorative-bar {
    margin-left: 3rem;
}

form input,
form textarea,
form button {
    display: block;
    width: 100%;
    font-size: inherit;
    font-family: inherit;
    font-weight: inherit;
    padding: 0.25rem;
    color: hsl(var(--DAR-HSL));
    background-color: rgb(var(--DARK-RGB)/.35);
    border: none;
}

input:hover,
textarea:hover,
select:hover,
input:focus,
textarea:focus,
select:focus {
    color: rgb(var(--LIGHT-RGB));
    background-color: rgb(var(--DARK-RGB)/100%);
    box-shadow: 2px 2px 2px rgb(var(--DARK-RGB)/0.5);
}

.tictactoe {
    flex: 1;
    display: grid;
    grid-template-columns: 1fr 2fr;
    grid-template-rows: 1fr;
    gap: 2rem;
}

.tictactoe .controls {
    grid-column: 1;
    align-self: center;
}

.tictactoe .game {
    grid-column: 2;
    place-self: center;
}

.tictactoe .board {
    display: grid;
    height: 100%;
    aspect-ratio: 1/1;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, 1fr);
    gap: 2rem;
    position: relative;
}

.tictactoe .board::after {
    content: "";
    inset: 0;
    position: absolute;
    /* board lines */
    background-image: linear-gradient(transparent 32.5%,
            rgb(var(--DARK-RGB)) 32.5%, rgb(var(--DARK-RGB)) 33%,
            transparent 33%, transparent 67%,
            rgb(var(--DARK-RGB)) 67%, rgb(var(--DARK-RGB)) 67.5%,
            transparent 67.5%),
        linear-gradient(90deg, transparent 32.5%,
            rgb(var(--DARK-RGB)) 32.5%, rgb(var(--DARK-RGB)) 33%,
            transparent 33%, transparent 67%,
            rgb(var(--DARK-RGB)) 67%, rgb(var(--DARK-RGB)) 67.5%,
            transparent 67.5%);
    z-index: -1;
}

.tictactoe .square {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    position: relative;
}

.tictactoe input {
    display: none;
}

.tictactoe label {
    /* shape for game markers when none are checked */
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.5rem;

    border: 2px solid rgb(var(--DARK-RGB)/.25);
    border-radius: 50%;
    background-image: radial-gradient(rgb(var(--DARK-RGB)) .75rem, transparent 70%);
    height: 2rem;
    width: 2rem;
    color: rgb(var(--LIGHT-RGB));
    cursor: crosshair;
    transition:
        width .5s cubic-bezier(0.175, 0.885, 0.32, 1.275),
        height 1s cubic-bezier(1, 0, 0, .75);
}

.tictactoe input:checked+label {
    /* shape for game markers when one is checked */
    position: absolute;
    height: 100%;
    width: 100%;
    border-color: transparent;
    background-color: rgb(var(--LIGHT-RGB));
    font-size: 3rem;
    font-weight: bolder;
    color: transparent;
    animation: tictactoe-blink 2s 1s infinite;
}

@keyframes blink {

    0%,
    50%,
    100% {
        opacity: 100%;
    }

    25% {
        opacity: 50%;
    }
}

@keyframes tictactoe-blink {
    0% {
        color: rgb(var(--DARK-RGB));
        border-color: red;
        background-image: radial-gradient(transparent 25%, rgb(var(--DARK-RGB)));
    }

    100% {
        color: rgb(var(--DARK-RGB));
        /* border-color: rgb(var(--DARK-RGB)); */
        background-image: radial-gradient(transparent 25%, rgb(var(--DARK-RGB)));
    }
}

